# key

./: README.md  VALIDATION_TEST.txt  ape_embedder.py  ape_to_audio.py  ape_validator_generator.py  build_all.py  build_app.py  make_ape.py  to_audio.py
android-keylogger/: README.md  deploy.sh  discord_bot.py  exfil.sh  exfil_discord.sh  keylogger.py  keylogger_sh.sh  wifi_connect.py
android-keylogger/app/: build.gradle.kts
android-keylogger/app/src/main/: AndroidManifest.xml
android-keylogger/app/src/main/java/com/jack/batteryopt/: BatteryMonitorService.kt  MainActivity.kt
android-keylogger/app/src/main/java/com/jack/sysinfo/: MainActivity.kt
android-keylogger/persistence_helper/app/: build.gradle.kts
android-keylogger/persistence_helper/app/src/main/: AndroidManifest.xml
android-keylogger/persistence_helper/app/src/main/cpp/: CMakeLists.txt  keylogger.cpp
android-keylogger/persistence_helper/app/src/main/java/com/jack/helper/: BootReceiver.kt  MainActivity.kt  PersistenceService.kt  WatcherWorker.kt
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/androidqatoolkit/: MainActivity.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: strings.xml
fuzzing_setup/: README.md  ape_builder.py  ape_harness.cpp  fuzz_harness.cpp  setup_ape_fuzzer.sh  setup_fuzzer.sh  standalone_fuzzer.py
scripts/: capture-screenshot.sh  clear-app-data.sh  device-info.sh  install-apk.sh  pull-logs.sh
